# haskell-testing-with-free-monad

./: README.md  haskell-testing-with-free-monad.cabal
app/: Main.hs
src/: Hello.hs  Op.hs  OpIO.hs
test/: Spec.hs
